--- a/cart.html
+++ b/cart.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Корзина</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div id="mini-cart"></div>
-    <div id="goods">
+    <div id="my-cart"></div>
 
-    </div>
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/eshop.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
